--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ test:
   password: root
 
 production:
-  adapter: 'pg'
+  adapter: 'mysql2'
   database: ALEMC_production
   pool: 5
   timeout: 5000
