precompile assets for heroku push

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,12 +1,13 @@
 ---
+bg.jpg: bg-b7cf57b8582140df91d742ef019b342e.jpg
 home.gif: home-073d15026d3c3b2adb9f221ae37337ac.gif
 home1.jpg: home1-4840b21e43c5502f696be7318bb6e283.jpg
 home1_small.jpg: home1_small-056524ba9794cd227c9a47113a2d19ed.jpg
 home2.jpg: home2-9595e0411d8488da272ad34000b4ac66.jpg
 home2_small.jpg: home2_small-0a57daced6cfe371c6a343f3c1841ed1.jpg
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
-application.js: application-6631f708d219f3a21b4adc4bfea5046b.js
+application.js: application-ae525713621081d671ca0c0205ed4bfa.js
 application.css: application-d20e2742e62672955ff32844e6085739.css
-custom.css: custom-18438593060c8502e705e932e2fbea38.css
+custom.css: custom-d9fb861742188c998ae6def4a6246e09.css
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 glyphicons-halflings.png: glyphicons-halflings-f6675c325532ec11a984d58e172b8e2a.png
